# cartoquantum-protocol

./: .gitignore  WHITEPAPER.md
core/: Cargo.toml  prueba.json  salida.ctq
core/src/: codec.rs  crypto.rs  lib.rs  main.rs  model.rs
protocol/: WHITEPAPER.md
web/: astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs  tsconfig.json
web/src/layouts/: Layout.astro
web/src/lib/: cartoquantum.ts
web/src/pages/: gen.astro  index.astro
web/src/pages/hash/: [compressed].astro
web/src/styles/: global.css
