[package]
name = "cartoquantum-core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
aes = "0.8"
rand = "0.8"
sha2 = "0.10"
hkdf = "0.12"
x25519-dalek = "2.0"
ed25519-dalek = "2.1"
lzma-rs = "0.3"
hex = "0.4"
anyhow = "1.0.98"
arrayref = "0.3.9"
ctr = "0.9.2"
cipher = "0.4.4"
